@@ -5,6 +5,7 @@ HEAD
 	  modelManager as changed.
 	+ Bug fix: don't create builders when there aren't
 	  enough interfaces
+	+ Add support for ppp configured interfaces
 1.4
 	+ Minor UI adjustments in titles for new release
 1.3.13
