@@ -8,6 +8,7 @@ HEAD
 	  So far observers were only notified right before the change takes place.
 	+ Add _notifyChangedIface() to factor code that calls observer to
 	  notify ifaceMethodChanged and ifaceMethodChangeDone
+	+ Add etherIface to fetch the ethernet interface from a  ppp interface
 1.4.2
 	+ Restart squid when failover events are produced to avoid problems
 	+ Do not check host when adding a ping to gateway rule in WAN Failover
